--- a/ticker/requirements.txt
+++ b/ticker/requirements.txt
@@ -1,85 +1,8 @@
 asgiref==3.8.1
-asttokens==2.4.0
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-chart-studio==1.1.0
-colorama==0.4.6
-colorlover==0.3.0
-comm==0.1.4
-contourpy==1.1.1
-cufflinks==0.17.3
-cycler==0.12.0
-debugpy==1.8.0
-decorator==5.1.1
-distlib==0.3.8
 Django==5.0.7
-djangorestframework==3.15.2
-executing==1.2.0
-fastjsonschema==2.18.0
-filelock==3.13.4
-fonttools==4.43.0
-fsspec==2024.3.1
-idna==3.4
-ipykernel==6.25.2
-ipython==8.15.0
-ipywidgets==8.1.1
-jedi==0.19.0
-Jinja2==3.1.3
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter_client==8.3.1
-jupyter_core==5.3.2
-jupyterlab-widgets==3.0.9
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-mpmath==1.3.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-networkx==3.3
+django-debug-toolbar==4.4.6
 numpy==2.0.1
 opencv-python==4.10.0.84
-packaging==23.1
-pandas==2.1.1
-parso==0.8.3
-pickleshare==0.7.5
 pillow==10.4.0
-pipenv==2024.0.1
-platformdirs==3.10.0
-plotly==5.17.0
-prompt-toolkit==3.0.39
-psutil==5.9.5
-pure-eval==0.2.2
-Pygments==2.16.1
-pyparsing==3.1.1
-pyTelegramBotAPI==4.21.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
-pywin32==306
-pyzmq==25.1.1
-referencing==0.30.2
-requests==2.31.0
-retrying==1.3.4
-rpds-py==0.10.3
-scipy==1.13.0
-six==1.16.0
-soupsieve==2.5
 sqlparse==0.5.1
-stack-data==0.6.2
-sympy==1.12
-telebot==0.0.5
-tenacity==8.2.3
-torch==2.2.2
-tornado==6.3.3
-traitlets==5.10.1
-transliterate==1.10.2
-typing_extensions==4.11.0
 tzdata==2024.1
-urllib3==2.0.5
-virtualenv==20.26.3
-wcwidth==0.2.6
-widgetsnbextension==4.0.9
