--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,14 @@ Django==5.0.7
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
 gunicorn==23.0.0
-numpy==2.0.1
+iniconfig==2.0.0
+numpy==2.1.0
 opencv-python-headless==4.10.0.84
 packaging==24.1
 pillow==10.4.0
+pluggy==1.5.0
+psycopg2==2.9.9
+pytest==8.3.2
+pytest-django==4.8.0
 sqlparse==0.5.1
 tzdata==2024.1
