--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 Django==5.0.7
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
+djangorestframework==3.15.2
 gunicorn==23.0.0
 iniconfig==2.0.0
 numpy==2.1.0
