--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ opencv-python-headless==4.10.0.84
 packaging==24.1
 pillow==10.4.0
 pluggy==1.5.0
+psycopg-binary==3.2.1
 psycopg2==2.9.9
 pytest==8.3.2
 pytest-django==4.8.0
