--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SECRET_KEY='django-insecure-2y#esz&*)7h0+gwthlhv35$=*#f-mu)_pc%*i!&_g&z6#(s0)%'
 DB_NAME='tickerdb'
 DB_USER='postgres'
 DB_PASSWORD='ROOT'
-DB_HOST='localhost'
+DB_HOST='db'
 DB_PORT='5432'
 MY_ALLOWED_HOSTS='127.0.0.1'
 DEBUG=False
